--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,14 @@
     <string name="app_name">My Applicatio</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="login">Login</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="get_started">GET STARTED</string>
+    <string name="dob">DOB</string>
+    <string name="name">Name</string>
+    <string name="contact">Contact</string>
+    <string name="register">REGISTER</string>
+    <string name="Login">Already registered ? login</string>
+    <string name="register_here">REGISTER HERE</string>
 </resources>
